--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<p>Current temperature (celsius): {{ tempCurrentCelsius }}</p>
-<p>Current temperature (farenheit): {{ tempCurrentFaren }}</p>
-<p>Current humidity (%RH): {{ humCurrent }}</p>
-
-<h6>To refresh, reload</h6>
+<app-readings></app-readings>
