--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -29,4 +29,4 @@ Humidity: <span id="hcp"></span>
     </ul>
 </div>
 
-<button class="btn btn-sm btn-secondary" (click)="getInfo()">Refresh</button>
+<button class="btn btn-sm btn-secondary" (click)="getInfoC()">Refresh</button>
