--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -4,29 +4,7 @@ Farenheit temperature: <span id="tfcp"></span>
 <hr>
 Humidity: <span id="hcp"></span>
 <hr>
-
-<div class="container">
-    <div class="bar one"></div>
-    <div class="bar two"></div>
-    <div class="bar three"></div>
-
-    <ul class="v-meter">
-        <li>
-            <div>40&deg;</div>
-        </li>
-        <li>
-            <div>30</div>
-        </li>
-        <li>
-            <div>20</div>
-        </li>
-        <li>
-            <div>10</div>
-        </li>
-        <li>
-            <div>0</div>
-        </li>
-    </ul>
-</div>
-
 <button class="btn btn-sm btn-secondary" (click)="getInfoC()">Refresh</button>
+<br>
+<a routerLink="">Back</a>
+<router-outlet></router-outlet>
