--- a/src/app/readings-hist/readings-hist.component.html
+++ b/src/app/readings-hist/readings-hist.component.html
@@ -1,1 +1,22 @@
+<div style="margin: auto; width: 75%; display: flex; justify-content: center; align-items: center; text-align: center;"
+    id="divoficon">
+    <h1 id="hoficon">The server is doing its magic...<b id="emptyspace2"></b><br><br><i id="icon-asdf"></i><b id="emptyspace1"></b></h1>
+</div>
+<div style="width: 800 !important; display: none;" id="ctxdiv">
+    <div class="btn-group" role="group">
+        <input type="radio" name="timeselect" class="btn-check" id="timeselopt1" data-value="1d" checked>
+        <label for="timeselopt1" class="btn btn-outline-dark">1 day</label>
+        <input type="radio" name="timeselect" class="btn-check" id="timeselopt2" data-value="1w">
+        <label for="timeselopt2" class="btn btn-outline-dark">1 week</label>
+        <input type="radio" name="timeselect" class="btn-check" id="timeselopt3" data-value="1m">
+        <label for="timeselopt3" class="btn btn-outline-dark">1 month</label>
+        <input type="radio" name="timeselect" class="btn-check" id="timeselopt4" data-value="1y">
+        <label for="timeselopt3" class="btn btn-outline-dark">1 year</label>
+        <input type="radio" name="timeselect" class="btn-check" id="timeselopt5" data-value="5y">
+        <label for="timeselopt3" class="btn btn-outline-dark">5 years</label>
+        <input type="radio" name="timeselect" class="btn-check" id="timeselopt6" data-value="all">
+        <label for="timeselopt3" class="btn btn-outline-primary">All</label>
+    </div>
+    <canvas id="ctx"></canvas>
+</div>
 <router-outlet></router-outlet>
