--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,1 +1,4 @@
-<p>ERROR: {{this.error}}</p>
+<div class="errDiv">
+    <h1>There was an error. It (probably) isn't your fault.</h1>
+    <h3>{{error}}</h3>
+</div>
