add time param and fix buttons

--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,4 +1,5 @@
 <div class="errDiv">
     <h1>There was an error. It (probably) isn't your fault.</h1>
     <h3>{{error}}</h3>
+    <h5><a>Send error to developer (using mail)</a></h5>
 </div>
