--- a/src/app/readings-hist/readings-hist.component.html
+++ b/src/app/readings-hist/readings-hist.component.html
@@ -18,5 +18,7 @@
         <label for="timeselopt3" class="btn btn-outline-primary">All</label>
     </div>
     <canvas id="ctx"></canvas>
+    <br>
+    <a routerLink="/" href="">Back</a>
 </div>
 <router-outlet></router-outlet>
